# rvv-encoder

./: Cargo.toml  Makefile  README.md
.cargo/: config
.cargo.bak/: config
.github/workflows/: rust.yml
examples/: simple.rs
rvv-as/: Cargo.toml  README.md
rvv-as/src/: main.rs
rvv-asm/: Cargo.toml  README.md
rvv-asm/examples/: simple.rs
rvv-asm/src/: lib.rs
rvv-encode/: Cargo.toml
rvv-encode/src/: asm.pest  lib.rs  opcodes.rs
src/: asm.pest  lib.rs  opcodes.rs
