[package]
name = "rvv-encoder"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0.80", features = ["extra-traits", "full", "fold", "printing"] }
pest = "2.1.0"
pest_derive = "2.1.0"
anyhow = "1.0.44"